2009-09-16  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Timothy Hatcher.

        Added a test that checks that margin property shorthand has correct value
        when there is background-repeat property in the style declaration.

        https://bugs.webkit.org/show_bug.cgi?id=28973

        * fast/backgrounds/repeat/margin-shorthand-expected.txt: Added.
        * fast/backgrounds/repeat/margin-shorthand.html: Added.
        * fast/backgrounds/repeat/resources/TEMPLATE.html: Added.
        * fast/backgrounds/repeat/resources/margin-shorthand.css: Added.
        * fast/backgrounds/repeat/resources/margin-shorthand.js: Added.
        (iconMarginValue):
2009-09-16  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Timothy Hatcher.

        Always reset m_implicitShorthand to false after parsing
        background-repeat style property otherwise properties
        following after it may be erroneously marked as implicit.

        https://bugs.webkit.org/show_bug.cgi?id=28972
        https://bugs.webkit.org/show_bug.cgi?id=28973

        Test: fast/backgrounds/repeat/margin-shorthand.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):

Canonical link: https://commits.webkit.org/40001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48436 268f45cc-cd09-0410-ab3c-d52691b4dbfc